--- a/0.0.0.indice.md
+++ b/0.0.0.indice.md
@@ -6,7 +6,7 @@
 
 ![CCbySA](images/CCbySQ_88x31.png)
 
-[![Vídeo: Presentación del Curso de impresion 3D para todos](https://img.youtube.com/vi/Guk_qBg6fqc/0.jpg)](https://youtu.be/Guk_qBg6fqc)
+[![Vídeo: Presentación del Curso de impresion 3D para todos](https://img.youtube.com/vi/Guk_qBg6fqc/0.jpg)](https://drive.google.com/file/d/1TKE7MuLuBySvZLtTC0MKnr2m8wkKx_yQ/view?usp=sharing)
 
 
 ## 0. [Introducción a la impresión 3D](./0.0.Introduccion3D.md)
