--- a/0.0.Impresion3DParaTodos.md
+++ b/0.0.Impresion3DParaTodos.md
@@ -1,5 +1,9 @@
 # Impresión 3D para todos
 
+[![Vídeo: Presentación del Curso de impresión 3D para todos](https://img.youtube.com/vi/Guk_qBg6fqc/0.jpg)](https://drive.google.com/file/d/1TKE7MuLuBySvZLtTC0MKnr2m8wkKx_yQ/view?usp=sharing)
+
+[Vídeo: Presentación del Curso de impresión 3D para todos](https://drive.google.com/file/d/1TKE7MuLuBySvZLtTC0MKnr2m8wkKx_yQ/view?usp=sharing)
+
 ## Objetivos
 
 * Conocer y analizar las posibilidades y capacidades del diseño e impresión en 3D.
