--- a/0.1.Historia.md
+++ b/0.1.Historia.md
@@ -1,9 +1,9 @@
 # Historia de la impresión 3D
 
-[![Vídeo: 0.0 Introducción a la impresión 3D](https://img.youtube.com/vi/tcj_56s_TuQ/0.jpg)](https://youtu.be/tcj_56s_TuQ)
+[![Vídeo: 0.0 Introducción a la impresión 3D](https://img.youtube.com/vi/tcj_56s_TuQ/0.jpg)](https://drive.google.com/file/d/1GQ6ZUEaMOJSZ3Ud2KeI1mPKz7Luu3vJJ/view?usp=sharing)
 
 
-[Vídeo: 0.0 Introducción a la impresión 3D](https://youtu.be/tcj_56s_TuQ)
+[Vídeo: 0.0 Introducción a la impresión 3D](https://drive.google.com/file/d/1GQ6ZUEaMOJSZ3Ud2KeI1mPKz7Luu3vJJ/view?usp=sharing)
 
 La aparición de herramientas abiertas como Arduino, ha permitido el desarrollo de herramientas cada vez más complejas y tan exitosas como [**RepRap**](https://reprap.org/wiki/RepRap), proyecto abanderado por [*Adrian Bowyer*](https://es.wikipedia.org/wiki/Adrian_Bowyer), originariamente destinado a crear máquinas que facilitaran la creación de prototipos en los laboratorios de un modo más rápido y eficiente. 
 
@@ -29,7 +29,7 @@ Hoy en día estas impresoras son un producto que puedes comprar y empezar a usar
 
 ![](https://pbs.twimg.com/media/EsVf4nsW8AAk_bR?format=jpg&name=medium)
 
-*Imagen de un busto de Nefertity impreso por el cocinero Alberto Chicote. [Modelo](https://www.myminifactory.com/object/3d-print-bust-of-nefertiti-at-the-egyptian-museum-berlin-2951)*
+*Imagen de un busto de Nefertiti impreso por el cocinero Alberto Chicote. [Modelo](https://www.myminifactory.com/object/3d-print-bust-of-nefertiti-at-the-egyptian-museum-berlin-2951)*
 
 En España, este movimiento tuvo su difusión de la mano de los [tutoriales de Juan González](http://www.iearobotics.com/wiki/index.php?title=Guia_de_montaje_de_la_Prusa_2) [*@obijuan*](http://www.iearobotics.com/wiki/index.php?title=Obijuan_Academy) que nos permitieron aprender sobre el uso de las impresoras y el software libre de diseño 3D como [*FreeCad*](https://www.freecadweb.org/). 
 
