--- a/0.2.Aplicaciones.md
+++ b/0.2.Aplicaciones.md
@@ -1,8 +1,8 @@
 # Aplicaciones de la impresión 3D
 
-[![Vídeo: Aplicaciones de la impresión 3D](https://img.youtube.com/vi/rx7sOvkTJaU/0.jpg)](https://youtu.be/rx7sOvkTJaU)
+[![Vídeo: Aplicaciones de la impresión 3D](https://img.youtube.com/vi/rx7sOvkTJaU/0.jpg)](https://drive.google.com/file/d/1LC2ZIpNanY9b26CEf6Yww9RNSlE6En7V/view?usp=sharing)
 
-[Vídeo: Aplicaciones de la impresión 3D](https://youtu.be/rx7sOvkTJaU)
+[Vídeo: Aplicaciones de la impresión 3D](https://drive.google.com/file/d/1LC2ZIpNanY9b26CEf6Yww9RNSlE6En7V/view?usp=sharing)
 
 Realmente podemos decir que el número de aplicaciones de las impresoras 3D es prácticamente infinito.  en todos los campos permiten la realización de prototipos y la copia de pieza a las que no tenemos acceso para realizar una de estas copias solamente tenemos que realizar un diseño o bien escanear una pieza original.
 
@@ -43,7 +43,7 @@ En el ámbito educativo existen excelentes recopilaciones de [Propuestas de usos
 
 También podemos encontrar todo tipo de juguetes para imprimir,  como por ejemplo este proyecto de realización de los conocidos  es [Spinners](https://github.com/javacasm/Spinners),  tan de moda hace unos años. R realizamos este proyecto con el alumnado de bachillerato para aprender conceptos de Física de robótica de tecnología en general y que vieran como ellos mismo podían fabricar sus propios componentes y trabajar con diseños propios en un laboratorio.
 
-![Equimo para medición de la velocidad de rotación de Spinners](https://github.com/javacasm/Spinners/raw/master/images/Montaje_testBench.jpg)
+![Equipo para medición de la velocidad de rotación de Spinners](https://github.com/javacasm/Spinners/raw/master/images/Montaje_testBench.jpg)
 
 
 ## Matemáticas
@@ -54,13 +54,13 @@ Un campo  qué aplicación ideal para la impresión 3D son las matemáticas dón
 
 ## Material de laboratorio
 
-Como ya hemos visto la impresora 3D aparecieron como una forma de facilitar la creación de prototipos.  uno de estos campos más interesantes es la creación de [Material de Laboratorio](https://www.thingiverse.com/javacasm/collections/laboratorio) de bajo coste y sobre todo el tener el total libertad para crear nuestro propio material modificando el que ya existe o adaptándola a nuestras necesidades.
+Como ya hemos visto las impresoras 3D aparecieron como una forma de facilitar la creación de prototipos.  Uno de estos campos más interesantes es la creación de [Material de Laboratorio](https://www.thingiverse.com/javacasm/collections/laboratorio) de bajo coste y sobre todo el tener la total libertad para crear nuestro propio material modificando el que ya existe o adaptándola a nuestras necesidades.
 
 ![pipeta](https://cdn.thingiverse.com/renders/d7/68/6a/35/52/IMG_1752_preview_card.jpg)
 
 ## Química
 
-La [Química](https://www.thingiverse.com/javacasm/collections/quimica)  es un campo dónde podemos aprovechar las capacidades visuales de las piezas impresas en 3D para entender conceptos complejos como puede ser la estructura de las moléculas.
+La [Química](https://www.thingiverse.com/javacasm/collections/quimica)  es un campo donde podemos aprovechar las capacidades visuales de las piezas impresas en 3D para entender conceptos complejos como puede ser la estructura de las moléculas.
 
 
 ![Epinefrina](https://cdn.thingiverse.com/renders/94/43/04/e5/03/WP_20141007_010_preview_card.jpg)
