--- a/0.3.Tecnologias3D.md
+++ b/0.3.Tecnologias3D.md
@@ -2,9 +2,9 @@
 
 Existen varias tecnología de impresión 3D vamos a dar un repaso sobre la más utilizada a día de hoy. 
 
-[![Vídeo: 0.2 Tecnologías de impresoras 3D ](https://img.youtube.com/vi/VRNiLtmjmH0/0.jpg)](https://youtu.be/VRNiLtmjmH0)
+[![Vídeo: 0.2 Tecnologías de impresoras 3D ](https://img.youtube.com/vi/VRNiLtmjmH0/0.jpg)](https://drive.google.com/file/d/1bKlfWRG_JdRJBk6X7TC7_ydx8lKS9GL2/view?usp=sharing)
 
-[Vídeo: 0.2 Tecnologías de impresoras 3D](https://youtu.be/VRNiLtmjmH0)
+[Vídeo: 0.2 Tecnologías de impresoras 3D](https://drive.google.com/file/d/1bKlfWRG_JdRJBk6X7TC7_ydx8lKS9GL2/view?usp=sharing)
 
 
 ## FDM (FFF)
@@ -38,7 +38,7 @@ Estas impresoras se están desarrollando bastante en la actualidad y se pueden c
 
 Las impresoras de tecnología SLA (Stereolitografía) son muy similares  a las  DLP pero la imagen se crea con un láser.  Se pueden usar resinas más económicas (el láser es más potente).
 
-![Tecnología sla](./images/sla.jpg)
+![Tecnología SLA](./images/sla.jpg)
 
 Su tecnología es bastante costosa a día de hoy lo que la hace solamente utilizable en el entorno industrial.
 
@@ -46,7 +46,7 @@ Su tecnología es bastante costosa a día de hoy lo que la hace solamente utiliz
 
 SLS (Selective laser sintering) es similar a SLA per en lugar de una resina usa un material pulverizado. Son muy utilizada en muchos entornos industriales como pueden ser la creación de implantes dentales y en entornos hospitalarios e  industriales.
 
-![Tecnología sls](./images/sls.jpg)
+![Tecnología SLS](./images/sls.jpg)
 
 
 ### FDM vs DLP
@@ -67,5 +67,5 @@ FDM 0.2mm vs DLP 0.02mm
 
 ![FDM vs DLP](./images/FDMvsDLP2.png)
 
-Viendo este resultado nos preguntamos ¿por qué no utilizamos impresoras de tecnología DLP?  aquí hace hoy la principal diferencia el coste del material el filamento nos cuesta aproximadamente unos 20 € por kilo mientras que la resina puede llegar a costarnos más de 100€.  En aquellos mercados en la en los que se puede vender objetos impresos a un alto precio cada vez se utiliza más obviamente la tecnología DLP.
+Viendo este resultado nos preguntamos ¿por qué no utilizamos impresoras de tecnología DLP?  aquí hace hoy la principal diferencia el coste del material el filamento nos cuesta aproximadamente unos 20 € por kilo mientras que la resina puede llegar a costarnos más de 100€.  En aquellos mercados en los que se puede vender objetos impresos a un alto precio cada vez se utiliza más obviamente la tecnología DLP.
 
