--- a/0.4.ComprarImpresora3d.md
+++ b/0.4.ComprarImpresora3d.md
@@ -17,10 +17,10 @@ Si tenemos un presupuesto de 1000 €, yo personalmente preferiría comprar 3 im
 
 En qué contexto podemos pensar en una impresora de más calidad o bien en alguien que no quiere molestarse en utilizarla en calibrarla y en un tipo de cliente que la necesita para imprimir sin pensar
 
-[![Vídeo: 0.5 ¿Qué impresora comprar?](https://img.youtube.com/vi/AFRegfBQCF0/0.jpg)](https://youtu.be/AFRegfBQCF0)
+[![Vídeo: 0.5 ¿Qué impresora comprar?](https://img.youtube.com/vi/AFRegfBQCF0/0.jpg)](https://drive.google.com/file/d/1d7lQ8J45gFST8fa8AP_rTovF5ZLSqkVe/view?usp=sharing)
 
 
-[Vídeo: 0.5 ¿Qué impresora comprar?](https://youtu.be/AFRegfBQCF0)
+[Vídeo: 0.5 ¿Qué impresora comprar?](https://drive.google.com/file/d/1d7lQ8J45gFST8fa8AP_rTovF5ZLSqkVe/view?usp=sharing)
 
 
 Vamos a ver algunos ejemplos de modelo que a día de hoy tienen una gran fama y un buen precio y que podía ser una compra interesante
@@ -41,7 +41,7 @@ Vamos a ver algunos ejemplos de modelo que a día de hoy tienen una gran fama y 
 
 ## Anycubics i3 Mega (300€)
 
-!Anycubics i3 Mega](./images/Anycubics_i3_Mega.jpg)
+![Anycubics i3 Mega](./images/Anycubics_i3_Mega.jpg)
 
 ## Kingroon Kp3S
 
