--- a/8.0.FallosImpresion.md
+++ b/8.0.FallosImpresion.md
@@ -47,3 +47,5 @@ Si al imprimir no encontramos que a partir de una capa, la pieza aparece desplaz
 [Manual de problemas de impresión de Bitfab](https://bitfab.io/es/blog/problemas-impresion-3d/)
 
 [Solución a los problemas de impresión](https://filament2print.com/es/blog/78_problemas-soluciones-impresiones-3d.html)
+
+[Guia de simplify3D](https://www.simplify3d.com/support/print-quality-troubleshooting/)
