--- a/2.1.Filamentos.md
+++ b/2.1.Filamentos.md
@@ -1,17 +1,11 @@
-## [Filamentos](http://comohacer.eu/comparativa-impresoras-3d/#Que_materiales_usan)
-
-
-Tipos
-Usos
-Calidades y precios
-
-### Proceso de fabricación
-
+## Filamento
 
 No nos cabe ninguna duda de que el filamento es parte esencial del resultado de toda  impresión:  la mejor impresora con un filamento de mala calidad no va a conseguir un resultado satisfactorio.
 
-
 Veamos cómo se fabrican los filamentos:
+
+### Proceso de fabricación
+
 
 Primero se prepara una mezcla con los distintos materiales que formarán el filamento
 
@@ -26,28 +20,25 @@ Primero se prepara una mezcla con los distintos materiales que formarán el fila
     *  pequeñas partículas de otro material que se verán en el resultado final
 * Está mezcla se funde y se comienza a obtener el filamento a alta temperatura a través de una boquilla del diámetro deseado. 
 
+![Dispositivo para fundido de plástico](./images/hqdefault.jpg)
+
 * El filamento resultante se va moviendo y enfriando al mismo tiempo para conseguir bajarlo a una temperatura suficientemente alta para que se pueda bobinar pero suficientemente baja para evitar que pierda las características que estamos buscando y se mantenga a un grosor lo más exacto posible.
+
+![Proceso de estirado y enfriado del filamento](./images/PLA-ABS-Plastic-Filament-Production-Line-for-3D-Printer.jpg)
 
 * Para ello se hace pasar por determinados baño a diferente temperatura y entre diferentes rodillo que garantizan su grosor
 
 * El último paso es el bobinado en los rollos que nos llegarán a  los usuarios. Este proceso de bobinado es muy importante para conseguir que no se produzcan nudos y que pueda recuperar el filamento y aprovechar hasta el último pedazo fragmento de la bobina
 
-
 Por el propio funcionamiento de la empresa a veces ocurre que encontramos que entre el cambio de una mezcla a otra con diferentes pigmentos o diferentes propiedades el fabricante decide utilizar ese resto que le queda te material para generar una bobina en las que el filamento no tiene un color homogéneo o no tiene ningún color concreto.  estás bobina suelen vender a un precio inferior la calidad del filamento en la misma pero al no tener un color homogéneo no la hacen apta para todo tipo de impresiones
-
-## Precios
-
-Existen multitud de empresas que venden filamento unas con mayor o con menor calidad,  a veces la encontramos a unos precios y a veces a otro. En cualquier caso tenemos de pensar  que una empresa difícilmente va a perder dinero vendiendo un filamento a un precio muy bajo. Cuando encontramos una oferta de filamento a un precio extremadamente bajo con gran probabilidad estamos ante una empresa  qué quiere eliminar un determinado lote de filamento las razones se nos escapan:
-
-*  Puede ser que simplemente quiera eliminar un stock que en ese momento no le interesa almacenar
-*  En otras ocasiones puede ser simplemente una oferta puntual que pretende ganar mercado o popularidad
-*  También puede ocurrir que estemos ante un filamento de baja calidad que la del que se quieren deshacer 
 
 ## Características  del filamento
 
-* El grosor,  que puede ser 2.85/3mm o de 1.75mm
-* El material, por supuesto, lo que nos va dar una temperatura de fusión y de adherencia a la base
+Veamos las características más importantes
 
+* El **material**, por supuesto, que tiene sus propias características, y combiene que lo elijamos adecuamente, para cada proyecto. A la hora de imprimirlo nos va dar recomendar temperatura de fusión y una de adherencia a la base. La mayoría de las impresoras pueden trabajar con distintos materiales.
+
+* El **grosor**,  que puede ser 2.85/3mm o de 1.75mm. El extrusor y por tanto la impresora está diseñado para trabajar con un determinado grosor y no debemo usar otro salvo que adaptemos o cambiemos el extrusor.
 
 
 
@@ -71,60 +62,75 @@ Una prueba rápida sobre el filamento es intentar doblarlo. Todos los filamentos
 
 ## Problemas provocados por el filamento
 
+En primer lugar, si no lo configuramos adecuamente el filamento vamos a perder tiempo y dinero en impresiones de mala calidad.
 
+Si utilizamos indebidamente un filamento o sin tener en cuenta sus características, podemos dar lugar a **atascos** que nos van a obligar a limpiar los diferentes componentes. Este tema es tan importante que le vamos a dedicar un apartado completo.
 
 
 ### Tipos de filamentos
 
-[![Vídeo: 4.0 Tipos y características de filamentos para impresión 3D](https://img.youtube.com/vi/74VFdfpiIuI/0.jpg)](https://youtu.be/74VFdfpiIuI)
+[![Vídeo: 4.0 Tipos y características de filamentos para impresión 3D](https://img.youtube.com/vi/74VFdfpiIuI/0.jpg)](https://drive.google.com/file/d/1h-5An52B_O8pozg4yZTWu2kZc23fH1wO/view?usp=sharing)
 
-[Vídeo: 4.0 Tipos y características de filamentos para impresión 3D](https://youtu.be/74VFdfpiIuI)
+[Vídeo: 4.0 Tipos y características de filamentos para impresión 3D](https://drive.google.com/file/d/1h-5An52B_O8pozg4yZTWu2kZc23fH1wO/view?usp=sharing)
 
 
 Cada vez existen más materiales susceptibles de poder usarse en las impresoras.
 
-* PLA: más ecológico y el más utilizado hoy en día
-* ABS: es de lo que están hechas las piezas de plástico que nos rodea, con la impresora es complicado de usar para piezas grandes y produce malos olores.
-* PETG: ecológico
-* HIPS: se disuelve fácilmente
-* Nylon: muy duro y semi flexible
-* Ninjaflex y Filaflex: muy flexibles
-* ...
+Vamos a repasar sus características y sus algunos de sus usos.
 
-**DETALLAR MAS LAS CARACTERÍSTICAS**
+* PLA: es un derivado del ácido láctico, más ecológico y el más utilizado hoy en día. Es fácil de imprimir, tiene muy buenas características de dureza. Un punto débil es que  comienza a ablandarse a unos 60-70º con lo que no es adecuado para piezas de exterior.
+* ABS: es el plástico del que están hechas las piezas de casi todo lo que nos rodea. Es complicado de imprimir en piezas grandes, puesto que se despega con facilidad y produce malos olores al imprimirse. Tiene una muy buena resistencia y permite que hagamos mecanizados sobre las piezas impresas, como pueden taladros, sin que se deteriore la estructura de capas.
+* PETG: Es un filamento muy ecológico, y una excelente elección para trabajar objetos grandes. Es muy resistente y además tiene una gran ventaja y se le considera seguro para contacto con alimentos.
+* HIPS: Una de las características más utilizadas de este filamento es que se deshace fácilmente con determinados líquidos como el Limoneno, de manera que si disponemos de una impresora que permite imprimir con 2 filamentos al mismo tiempo podemos hacer que el material de soporte que tendremos que retirar se imprima en HIPS y la pieza propiamente en PLA o ABS. Al terminar, sumergimos la pieza completa en el líquido y todo el soporte desaparece.
 
-## Flexibles
+![Soporte de HIPS que se disuelve fácilmente](./images/HIPS-cover-768x452.jpg)
+
+* Nylon: es un material muy duro y a la vez elástico, no es que podamos doblarlo sino que si lo sometemos a golpes, su elasticidad lo va a proteger ante roturas.
+
+* Ninjaflex y Filaflex: son filamento muy flexibles, similares a la silicona o al goma y que además de elásticos y flexibles tiene una gran adherencia, algo que es necesario para muchas piezas, como por ejemplo la parte externa de las ruedas, lo que sería el neumático. Son filamentos más caros, pero que no suelen utilizar en grandes piezas.
 
 ![filamentoFlexible](./images/filamentoFlexible.jpg)
 
-## Composites:
 
-* Madera
+Estos filamentos que hemos visto casi nunca vienen de una forma pura, sino que los fabricantes los combinan para mejorar sus características.
+
+## Composites
+
+Son materiales con una base plástica pero en al que se añaden partículas u otro componente que le da alguna característica deseada, como puede ser distinto aspecto/acabado, textura metálica, olores, ...
+
+Su precio suele ser bastante más elevado que el de los filamentos "normales".
+
+* Filamento con acabado de madera: como vemos tiene un aspecto totalmente natural, suelen tener partículas de serrín que le dan ese aspecto y le podemos conseguirlo en varios tipos de madera. Algunos de ellos dependiendo de la temperatura de impresión toman diferentes colores, con lo que se pueden conseguir acabados con veteados similares a la madera.
 
 ![madera](./images/filamentoMadera.jpg)
 
-* Bronce
+* Filamentos con acabado metálico: bronce, dorado u otros metales. Se pueden conseguir acabados muy similares
 ![bronce](./images/filamentoBronce.png)
 
 
 ### Parámetros
 
-* Temperatura extrusor
-* Temperatura cama caliente
-* Velocidad
-* Ventilador de Capa
+Siempre que utilizamos un filamento tenemos que tener claros los parámetros para conseguir una buena calidad de impresión.
 
+Como hemos visto el proceso de impresión consiste en fundir el filamento, depositarlo y enfriarlo para que se solidifique. Podemos regular estas 3 fases controlando los siguietnes parámetros:
 
-### Temperatura
+* **Temperatura extrusor**: temperatura al que se funde el material. No hay un número exacto y ajustándola adecuadamente podemos conseguir diferentes acabados:
+    * Una temperatura más elevada va a producir un acabado más fluído, donde las capas están más fundidas entre si. El acabado será más "liso"
+    * Una tempera más baja va a conseguir una mayor precisión en la impresión, con el acabado de las capas más preciso.
+Veamos algunas de las temperaturas típicas:
+        * ABS: 240º
+        * PLA: 190º
+        * Nylon: 260º
+        * Filaflex: 220º
+* **Temperatura de la base**/cama caliente: nos va a permitir conseguir una mejor adhesión de la pieza a la base. Si tenemos mala adhesión, la pieza se moverá y el resultado será malo.
+* **Velocidad de impresión**: tenemos que ajustar la velocidad de impresión al material. Para materiales flexibles tenemos que usar una velocidad más baja. De los contrario, debido a la elasticidad del filamento, el resultado será bastante malo, dando lugar a atascos.
+* **Ventilador de Capa**: el extrusor tiene un ventilador para enfriar el filamento que sale fundido. Al enfriarlo rápidamente conseguimos que se endurezca inmediamente. A veces nos interesa que se solidifique al salir (por ejemplo cuando estamos haciendo un parte horizontal que cuelga) y otras queremos lo contrario puesto que si no se enfría se pegará más facilmente a la otra capa.
 
-Cada material se trabaja a una temperatura diferente, de hecho cada filamento necesita de una temperatura diferente.
+## Ejemplos de materiales
 
-* ABS: 240º
-* PLA: 190º
-* Nylon: 260º
-* Filaflex: 220º
+Podemos hablar en general de un material, pero lo realemente importante es conocer los parámetros que nos dan el fabricante. De hecho podemos ver como un mismo fabricante vende varios materiales, en principio de un mismo tipo, como PLA, pero con diferentes características y acabado.
 
-## Ejemplos 
+Vamos a ver algunos de ellos, enlazados a su fabricante:
 
 #### [Textura Madera Arce](https://sakata3d.com/es/pla-texture/146-texture-madera-de-arce.html)
 
@@ -181,16 +187,17 @@ El filamento HIPS es un termoplástico con cualidades similares al ABS pero con 
 * Temperatura de impresión: 220-235 ºC
 * Temperatura cama: 50 ºC
 
+## Precios
 
-### Otros
+El precio del filamento varia bastante dependiendo del tipo de material, pero podemos encontrar filamento "normal" (PLA o ABS) de buena calidad en torno a los 20€/Kg. Para otros filamentos con características más especiales, como son los acabados metálicos o los filamentos flexibles suelen bastante más caros.
 
-[Wood - Roble](https://sakata3d.com/es/pla-texture/151-texture-wood-roble.html)
+La mayoría de las empresas suelen tener oferta de filamentos en los que la calidad del material es exactamente la misma, pero hay diferencias entre el color del principio de la bobina y el final. En muchas
 
-[Granito](https://sakata3d.com/es/pla-texture/153-texture-granito.html)
+Existen multitud de empresas que venden filamento unas con mayor o con menor calidad,  a veces la encontramos a unos precios y a veces a otro. En cualquier caso tenemos de pensar  que una empresa difícilmente va a perder dinero vendiendo un filamento a un precio muy bajo. Cuando encontramos una oferta de filamento a un precio extremadamente bajo con gran probabilidad estamos ante una empresa  qué quiere eliminar un determinado lote de filamento las razones se nos escapan:
 
-### Recursos
-
-[Tipos de materiales](https://bitfab.io/es/materiales-de-impresion-3d-fdm/)
+*  Puede ser que simplemente quiera eliminar un stock que en ese momento no le interesa almacenar
+*  En otras ocasiones puede ser simplemente una oferta puntual que pretende ganar mercado o popularidad
+*  También puede ocurrir que estemos ante un filamento de baja calidad que la del que se quieren deshacer 
 
 
 ## Cuidados del filamento
