--- a/2.0.Repositorios.md
+++ b/2.0.Repositorios.md
@@ -1,22 +1,117 @@
 #### Repositorios de modelos 3D
 
-[![Vídeo: 2.0 Dónde obtener modelos para imprimir: repositorio y tinkercad](https://img.youtube.com/vi/CbpULxqERrs/0.jpg)](https://youtu.be/CbpULxqERrs)
+[![Vídeo: 2.0 Dónde obtener modelos para imprimir: repositorio y tinkercad](https://img.youtube.com/vi/CbpULxqERrs/0.jpg)](https://drive.google.com/file/d/1_SmJO0vc-zB2pzVtisMQqFWJCwVDWiEn/view?usp=sharing)
 
-[Vídeo: 2.0 Dónde obtener modelos para imprimir: repositorio y tinkercad](https://youtu.be/CbpULxqERrs)
+[Vídeo: 2.0 Dónde obtener modelos para imprimir: repositorio y tinkercad](https://drive.google.com/file/d/1_SmJO0vc-zB2pzVtisMQqFWJCwVDWiEn/view?usp=sharing)
 
-* [Thingiverse](http://www.thingiverse.com)
-* [youimagine](https://www.youmagine.com)
-* [yeggi](http://www.yeggi.com/)
-* [MyMiniFactory](https://www.myminifactory.com/)
-* [GrabCad](https://grabcad.com/)
-* [Pinshape](https://pinshape.com)
-* [Cults3D](https://cults3d.com/)
-* [repositorio de la Universidad Miguel Hernández de elche](http://impresion3d.edu.umh.es/)
+Vamos a hacer un recorrido sobre diferentes repositorios de modelos desde los que podemos descargar ficheros para imprimir.
+
+Existen muchos, y seguro que algunos se quedan en el tintero, no dudes en comentar si echas alguno en falta.
+
+## [Thingiverse](http://www.thingiverse.com)
+
+Es con diferencia el repositorio más utilizado. En él vamos a encontrar todo tipo de modelos.  como casi todas estas páginas funciona como una red social en la que como usuario podemos seguir a otro usuario diseñadores y podemos marcar como me gusta con preferido y guardando distintos modelos que vayamos seleccionando. 
+
+Su funcionamiento es totalmente **gratuito** podemos subir nuestros contenidos siempre que queramos y descargar el contenido que otro usuario ha subido.  
+
+Hace un tiempo hubo cierta polémica acerca de ciertos modelos que algunos usuario habían subido y que  la empresa Makerbot, dueña de Thingiverse, había utilizado sin respetar la licencia.
+
+En Thingiverse podemos obtener prácticamente de todo. Para ello sólo tenemos que usar el buscador e ir explorando los resultados.
+
+Por ejemplo si [buscamos "Leonardo" podemos encontrar muchos diseños relacionados](https://www.thingiverse.com/search?q=leonardo&type=things&sort=relevant)
+
+![Resultados de búsqueda de "leonardo" en Thingiverse](./images/thingiverseLeonardo.png)
+
+Entre los resultados vemos que hay [diseños relacionados](https://www.thingiverse.com/thing:3693906)  y muy interesantes
+
+![Bicicleta de Leonardo](./images/biciLeonardo.jpg)
+
+
+Y otros que en principio no tienen nada que ver... nos ocurre un poco como nos pasa cuando buscamos en Internet, que hay un poco de todo.
+
+En thingiverse no hay nadie que se encargue de organizar la información ni filtrar. 
+
+
+
+## [You Imagine](https://www.youmagine.com)
+
+Se trata de un sitio donde podemos encontrar no sólo diseños, sino proyectos muy interesantes donde la impresión 3D es fundamental
+
+![Proyectos de youimagine](./images/youimagine.png)
+
+## [Sketchfab](https://sketchfab.com/)
+
+Se trata de un repositorio de modelos de gran calidad, donde muchas Universidades han puesto a nuestra disposición todo tipo de diseño, como este [cráneo de un lobo](https://sketchfab.com/3d-models/wolf-skull-fw2415-1566e56e6a7e47f890b9b389457346a8) 
+
+![Cráneo Lobo](./images/CraneoLobo.png)
+
+O [este cráneo humano real](https://sketchfab.com/3d-models/skull-complete-with-cap-and-mandible-301405aafb0e4f9ebbebd24b75b537bf)
+
+![Cráneo humano](./images/Craneo_sketchfab.png)
+
+O diseño muy realistas como [este helicóptero ruso](https://sketchfab.com/3d-models/russian-transport-heli-ab981d28f7124a489cd1b1992b2e467b)
+
+![Helicóptero Ruso](./images/HelicopteroRuso.png)
+
+También vamos a encontrar modelos de pago.
+
+
+## [MyMiniFactory](https://www.myminifactory.com/)
+
+Es un repositorio repleto de modelos de gran calidad, un poco orientado al mundo friqui de las maquetas  y juegos de mesa.
+
+Se alteran diseños gratuitos con otros de pago, aunque el precio suele ser bajo (unos pocos euros), eso sí todos suelen ser de gran calidad
+
+En algunos diseños podemos encontrar configuradores que nos permiten configurar el diseño final a partir de componentes. Por ejemplo en este [diseño de un explorador/caballero](https://www.myminifactory.com/customizer/ranger-human-male-85) donde vemos que podemos seleccionar las diferentes armas que empuña en cada mano, o el tipo de cabeza o la base del diseño
+
+![Diseño configurable](./images/CabelleroConfigurable.png)
+
+Este repositorio financia y alberga también el proyecto [Scan the World](https://www.myminifactory.com/scantheworld/) dedicado a recoger objetos de museos de todo el mundo escaneados 
+
+![Scan the World](./images/ScanTheWorld.png)
+
+De cualquiera de estos diseños podemos obtener detallados modelos para imprimir
+
+## [Pinshape](https://pinshape.com)
+
+Es un repositorio repleto de contenido de calidad, muchos de ellos de pago (1-5€) pero siempre de mucha calidad. Los diseños están muy bien organizados por temáticas
+
+Con frecuencia suelen publicar concursos donde subir nuestros diseños.
+
+## [Cults3D](https://cults3d.com/)
+
+Se trata de un sitio comercial, donde se publicitan recursos, impresoras, diseños...
+
+![Diseños de Cults3D](./images/Cults3d.png)
+
+Podemos encontrar diseños tan interesantes como [esta caja de seguridad con combinación](https://cults3d.com/es/modelo-3d/juegos/cryptex-af_inventions)
+
+![Cryptex](./images/criptex.webp)
+
+Hay que estar muy pendientes de los concursos que se publican, puesto que tienen muy buenos premios y además dan mucha promoción a los diseñadores.
+
+## [yeggi](http://www.yeggi.com/) 
+
+Es un metabuscador que nos va a permitir buscar en varios repositorios al mismo tiempo, es decir, cuando buscamos nos proporciona enlaces a modelos en otros repositorios.
+
+Vamos a ver ahora una colección de repositorios donde los diseños son en media de gran calidad, puestos que existen cuidadores que se encargan de validara la calidad de los diseños.
+
+Por ejemplo si buscamos [Nasa Rocket](https://www.yeggi.com/q/nasa+rocket/) vamos a encontrar diseño de muy diferentes repositorios, algunos gratuitos, otros de pago....
+
+
+## [GrabCad](https://grabcad.com/)
+
+Se trata de un repositorio de diseños industriales, los típicos que uno espera cuando trabaja con software CAD. Vamos a encontrar todo tipo de diseños de máquinas, de motores.
+
+![Diseños de GrabCad](./images/GrabCad.png)
+
+Como todos los anteriores, hay diseños que son de pago.
 
 ## [Tinkercad](https://tinkercad.com)
 
-Tinkercad es una web donde podemos crear diseños en 3D, pero también nos permite explorar las creaciones que publican otros usuarios y descargar ficheros STL para imprimir.
+Tinkercad es una aplicación web donde podemos crear diseños en 3D, pero también nos permite explorar las creaciones que publican otros usuarios y descargar ficheros STL para imprimir.
 
-#### Recursos
+No dejes de buscar [su Galería](https://www.tinkercad.com/things) para ver  sus diseños. En la sección de diseño 3D hablaremos bastante de esta herramienta.
 
-[Dónde encontrar modelos 3D](https://www.creativosonline.org/blog/los-mejores-lugares-encontrar-plantillas-impresion-3d.html)
+![Galería de Tinkercad](./images/tinkercadGaleria.png)
+
