--- a/2.1.Filamentos.md
+++ b/2.1.Filamentos.md
@@ -6,21 +6,26 @@ Veamos cómo se fabrican los filamentos:
 
 ### Proceso de fabricación
 
-
 Primero se prepara una mezcla con los distintos materiales que formarán el filamento
 
 * Se parte del plástico original que será la base (PLA, ABS, PETG,...) en forma de pellets
+
+![Pellets](./images/dsc02548-medium.jpg)
+
 * Se le añaden diferentes aditivos, en una proporción mucho menor, para conseguir determinadas propiedades que se van buscando. 
     * conseguir diferentes grados de dureza
     * facilidad de impresión 
     * rigidez o elasticidad
 * Se añade un colorante y/o otros aditivos para conseguir el acabado que vamos buscando:
-    *  acabado en madera 
-    * acabado metalizado
-    *  pequeñas partículas de otro material que se verán en el resultado final
+    * Acabado en madera 
+    * Acabado metalizado
+    * Pequeñas partículas de otro material que se verán en el resultado final
+
+![Colorantes](./images/dsc02529-medium.jpg)
+
 * Está mezcla se funde y se comienza a obtener el filamento a alta temperatura a través de una boquilla del diámetro deseado. 
 
-![Dispositivo para fundido de plástico](./images/hqdefault.jpg)
+![Dispositivo para fundido de plástico](./images/dsc02538-medium.jpg)
 
 * El filamento resultante se va moviendo y enfriando al mismo tiempo para conseguir bajarlo a una temperatura suficientemente alta para que se pueda bobinar pero suficientemente baja para evitar que pierda las características que estamos buscando y se mantenga a un grosor lo más exacto posible.
 
